fix some role filtering errors
